Add some of Yousef's implementation section to the report

--- a/report/report.bib
+++ b/report/report.bib
@@ -4,3 +4,20 @@
 	year={2002},
 	publisher={Prentice Hall Professional Technical Reference}
 }
+@online{squares,
+	author = {Andrey Kamaev},
+	title = {The "Square Detector" program},
+	year = {2013-04-08},
+	url = {https://github.com/Itseez/opencv/blob/master/samples/cpp/squares.cpp},
+	urldate = {2014-04-01}
+}
+@article{suzuki1985topological,
+	title={Topological structural analysis of digitized binary images by border following},
+	author={Suzuki, Satoshi and others},
+	journal={Computer Vision, Graphics, and Image Processing},
+	volume={30},
+	number={1},
+	pages={32--46},
+	year={1985},
+	publisher={Elsevier}
+}
