--- a/report/report.tex
+++ b/report/report.tex
@@ -9,10 +9,13 @@
 \usepackage[style=authoryear,backend=biber]{biblatex}
 \renewcommand*{\nameyeardelim}{\addcomma\addspace}
 \usepackage[toc,page]{appendix}
+\newcommand{\source}[2]{\emph{#1 } (appendix~\ref{#2}, page~\pageref{#2})}
+\newcommand{\secref}[1]{(section~\ref{#1}, page~\pageref{#1})}
 \usepackage{textcomp}
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{listings}
+\newcommand{\code}[1]{\colorbox{white}{\lstinline[basicstyle=\ttfamily\color{black}]|#1|} }
 \usepackage{color}
 \usepackage{hyperref}
 \addbibresource{report.bib}
@@ -43,6 +46,185 @@
 \setcounter{page}{1}
 
 \parskip 2mm
+
+\section{Introduction}
+	\subsection{Task Assigned}
+	\subsection{Method Used}
+	\subsection{Findings}
+\pagebreak
+\section{Review}
+	\subsection{Identify sub-tasks}
+		(Flowhart breakdown from final PPT?)
+	\subsection{Review of methods}
+		(existing literature (HIPR2?))
+		Should each include limitations if not chosen, justification in 3.2
+		\subsubsection{High-level Isolation}
+			Contours
+			Perspective transform (That OpenGL citation?)
+		\subsubsection{Low-level Classification}
+			Basic morphology
+			HoM Transform
+\pagebreak
+\section{Proposed Method}
+	\subsection{Logical progression from whole image to classification}
+		Program flow, flowchart
+	\subsection{Justify each stage’s techniques}
+		Identify strengths and weaknesses
+\pagebreak
+\section{Implementation}
+	Justify custom implementations vs. OpenCV pre-made function
+	\^(interleaved and when relevant)
+	\subsection{Image IO/Webcam IO}
+	\subsection{Card Isolation}
+
+		Once an image is passed in as an input, the first step is to find one or more cards in the image and, if any were found, extract them from the image and prepare them for processing. This is done in a number of steps.
+
+		\subsubsection{Card Detection}
+
+			In order to detect cards within the image, the function \code{find_cards()} in \source{isolation.cpp}{app:maincpp} is called from \source{main.cpp}{app:maincpp}. It takes in an empty vector of objects of type \code{Card} as an inputs which it then populates with the detected cards for later processing.
+
+			Cards are detected by finding quadrilaterals with a method not unlike the one used in the sample file \emph{squares.cpp} in the official OpenCV repository \autocite{squares} albeit with some decisive distinctions. The backbone of the algorithm is the OpenCV function \code{cv::findContours()}. This function retrieves contours from a binary image using the algorithm developed by \textcite{suzuki1985topological} via border following. It was decided not to implement a custom function since it would not have added any flexibility or speed advantage over the OpenCV implementation. Indeed it would only have increased code complexity.
+
+			% TODO: Label "High-level Isolation"
+			This function requires a binary image as an input. As such, input images undergo a series of processing before hand. First, they are converted to greyscale. Then CLAHE --- as explained previously \secref{sec:isolation} --- is applied to these images. The size of the CLAHE window varies between 32x32 and 28x28 pixels depending on if the user has specified with the \code{--multi} command line flag that the program should run in multiple card mode. CLAHE operations using OpenCV functions run on the GPU through CUDA; they cannot be optimised by writing custom code for CLAHE without utilising CUDA, which would only introduce system-level bugs that have been long since resolved within OpenCV's code base. For this reason, the OpenCV CLAHE implementation was used.
+
+			% TODO: IMAGES
+
+			After performing CLAHE, the image is blurred. The amount of blur is set as a function of it image's dimensions. More specifically \code{(image_size.width + image_size.height)>>8} or in plain English, the perimeter of the image divided by 512. This prevents small images from losing too much detail through blurring while large images do not remain too sharp. Blurring is done to filter out noise for the next step.
+
+			The resulting image is then converted to binary using the threshold parameter before \code{cv::findContours()} is called. Contours are found for processed binary images for thresholds ranging from 150 to 255 (both inclusive) in increments of 2. This bright range was experimentally determined to be the best to create binary images from.
+
+			The found contours are then approximated into geometry using with the function \code{cv::approxPolyDP()} and then go through a number of rigorous checks. Contours that do not pass these checks are discarded and not added to the final contours collection that the function populates. These include:
+
+			\begin{enumerate}
+				\item Does the contour have four corners?\\[4px]
+					Although card contours can have more than 4 approximated corners if the cards are bent or folded significantly, most will not, so the design does not handle card contours with more than four corners.
+				\item Is its area greater than 4\% of the whole image?\\[4px]
+					This is to filter out noise.
+				\item Is it convex in shape like card borders?
+				\item Is its area less than 75\% of the image?\\[4px]
+					This is to filter out borders.
+				% TODO: More detail? Including reason for fixing?
+				\item Is it not inside another previously detected contour or another inside it?\\[4px]
+					Calculated mathematically from vertex coordinate information. This is to filter out symbol (e.g. diamonds) and picture card misclassification. Previously detected contours in the list that turn out to be contained by newly detected contours are replaced by the newly detected and discarded.
+				\item Is it significantly dissimilar to previously detected contours?\\[4px]
+					The criteria for this check are that every rotation of the four contour vertices are at least a certain total distance away from their counterparts (summed up manhattan/city block distance in pixels). This minimum total distance is a function of the image size to normalise pixel units into units relative to the image dimensions. This relationship is \code{(image_size.width + image_size.height) * 0.5F * min_square_diff} or in other words, the mean image side length (to account for disproportionate image aspect ratios) multiplied by a constant factor set to $0.1$, i.e. 10\% of the mean image side length.
+			\end{enumerate}
+
+			Once all contours have been iterated through and the ones that fail these criteria have been filtered out, the result is a collection of contour quads that surround at least every card in the image (in the form of a \code{vector<vector<cv::Point> >} --- a vector of vectors with four points each). \emph{At least} every card in the image; the pruning process is not yet over!
+
+			The assortment of contours go through a secondary, later filtration process that requires processing the pixel data within these contours. To do this --- as well as to construct the card Mats for subsequent classification --- the contour quad data is used to perspective transform the original image into a rectangular image of the card, an operation reviewed previously \secref{sec:isolation}.
+
+			\begin{figure}[ht]
+				\centering
+				\includegraphics[width=0.6\linewidth]{perstrans1}
+				\includegraphics[width=0.3\linewidth]{perstrans2}
+				\caption{Output of Perspective Transform of Contour Quad from Test Image}
+				\label{fig:perstrans}
+			\end{figure}
+
+			The perspective transform is low-level enough that its implementations do not vary much at all. The maths involved in calculating the 3x3 matrix of a perspective transform that can be used to map pixels at a perspective to other shapes/perspectives is standard but cumbersome to implement (unlike an affine transform). For these reasons, the OpenCV function \code{cv::getPerspectiveTransform()} was used. It takes two quads as inputs and returns the map matrix. The source quad is the detected contour and the destination quad is a simple 250x350 rectangle which matches the standard 5:7 poker card aspect ratio like in figure~\ref{fig:perstrans}.
+
+			The transformation matrix is then used in the function \code{cv::warpPerspective()} which deforms the pixel grid of the source image and maps it to the destination image while interpolating transitional pixels; a process that is both non-trivial as well as distant from the task at hand. The Mat produced through this process is subsequently used to instantiate a new \code{Card} object.
+
+			On instantiation, the \code{Card} constructor additionally generates an 8x8 CLAHE version and a 140 threshold binary version of the card Mat, which are publicly accessible from a \code{Card} object. Once instantiated, the cards binary Mat is finally used for the last phase of isolation filtering.
+
+			The last criteria for what makes a card is its whiteness measure. The measure is simple; all non-zero (i.e. white) pixels in the card Mat are counted and the final value is divided by the card's area giving a float that describes the proportion of whiteness in the card. The whiteness threshold is set to an experimentally practical \code{0.5F} or 50\% bearing in mind that error due to lighting inconsistency is a non-issue following CLAHE. Cards that are not white enough are discarded. This solves false detections such as that in figure~\ref{fig:whiteness}.
+
+			\begin{figure}[ht]
+				\centering
+				\includegraphics[width=0.9\linewidth]{whiteness}
+				\caption{Example of Whiteness Check Ignoring Overturned Card}
+				\label{fig:whiteness}
+			\end{figure}
+
+			Finally, there is one more processing step that needs to be undertaken before a detected card is deemed worthy enough to join its brethren in the detected card vector and \code{find_cards()} can return...
+
+		\subsubsection{Rotation Correction}
+
+			One deal-breaking issue was the problem of a sequence of contour quad vertices starting at the wrong corner and, as a direct consequence, causing the final card Mat to be perspective transformed incorrectly. This problem became evident became evident when processing cards where the top-most corner in the image is numbered, such as the lower examples in figure~\ref{fig:rot}; the card could just be at a very strange perspective that projects to that shape.
+
+			\begin{figure}[ht]
+				\centering
+				\includegraphics[width=0.6\linewidth]{rot1}
+				\includegraphics[width=0.3\linewidth]{rot2}\\[5px]
+				\includegraphics[width=0.6\linewidth]{rot3}
+				\includegraphics[width=0.3\linewidth]{rot4}
+				\caption{Example of Erroneous Perspective Transformation}
+				\label{fig:rot}
+			\end{figure}
+
+			The solution developed is simple and works very well. The same measure of whiteness as is used for the whole card is applied to both the top left and the bottom right corners of the card Mat (the bounds for which are defined as static constants in the \code{Card} class based on physical measurements). If corner whiteness surpasses 80\%, the card quad is rotated by one vertex --- the direction or rotation being arbitrary due to a card's symmetry --- and transformed into a new Mat.
+
+			The corner whiteness for this new Mat is also measured, and compared against old corner whiteness. If it has a lesser corner whiteness measure than the old, that means that the old card Mat was indeed oriented incorrectly and so the new one is used instead. If the opposite holds true, then the first overall whiteness threshold was passed incorrectly (perhaps due to some bizarre specular lighting that the CLAHE did not quite catch) and so the new mat is discarded and the old one's usage is continued as if nothing ever happened.
+
+			At long last, the \code{Card} vector contains all detected cards --- to a high degree of accuracy --- ready for processing and classification by the rest of the program, and the function can return.
+
+	\subsection{Color Detection}
+	\subsection{Type Detection}
+	\subsection{Symbol/Rank symbol Isolation}
+	\subsection{Number Detection}
+		\subsubsection{Value cards}
+			Morphological opening/closing
+			Floodfill count
+		\subsubsection{Picture cards}
+			Application of HoM
+		\subsubsection{Custom HoM Implementation}
+	\subsection{Suit Symbol Detection}
+		Colour Integration
+		HoM
+	\subsection{Results output}
+		GUI
+		Console output
+\pagebreak
+\section{Evaluation}
+	\subsection{Test images, increasing complexity}
+	\subsection{Webcam tests}
+	\subsection{Confusion Matrix}
+\pagebreak
+\section{Conclusion}
+	\subsection{Summary}
+	\subsection{Improvements}
+\pagebreak
+\begin{appendices}
+	\section{Contribution Agreement}
+		(I have both of these and can scan them)
+	\pagebreak
+	\section{Source Code Listings}
+		\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
+		\definecolor{greencomments}{rgb}{0,0.5,0}
+		\definecolor{redstrings}{rgb}{0.9,0.7,1}
+
+		% Here's where you can mess with the style (this is a comment btw)
+		\lstset{
+			language=C++,
+			showspaces=false,
+			showtabs=false,
+			breaklines=true,
+			breakatwhitespace=true,
+			escapeinside={(*@}{@*)},
+			commentstyle=\color{greencomments},
+			keywordstyle=\color{bluekeywords},
+			stringstyle=\color{redstrings},
+			basicstyle=\ttfamily\scriptsize,
+			captionpos=t,
+			extendedchars=true,
+			frame=single,
+			keepspaces=true,
+			showstringspaces=false,
+			stepnumber=2,
+			tabsize=2,
+		}
+
+		\subsection{main.cpp}
+		\label{app:maincpp}
+		\lstinputlisting{res/appendices/src/main.cpp}
+\end{appendices}
+
+\vfill
+\hrulefill
+
+\end{document}
 
 \section{Introduction}
 	
@@ -183,44 +365,5 @@
 \thispagestyle{empty}
 \printbibliography
 
-\pagebreak
-
-\begin{appendices}
-
-\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
-\definecolor{greencomments}{rgb}{0,0.5,0}
-\definecolor{redstrings}{rgb}{0.9,0.7,1}
-
-\section{Source Code Listings}
-
-% Here's where you can mess with the style (this is a comment btw)
-\lstset{
-	language=C++,
-	showspaces=false,
-	showtabs=false,
-	breaklines=true,
-	breakatwhitespace=true,
-	escapeinside={(*@}{@*)},
-	commentstyle=\color{greencomments},
-	keywordstyle=\color{bluekeywords},
-	stringstyle=\color{redstrings},
-	basicstyle=\ttfamily\scriptsize,
-	captionpos=t,
-	extendedchars=true,
-	frame=single,
-	keepspaces=true,
-	showstringspaces=false,
-	stepnumber=2,
-	tabsize=2,
-}
-
-\subsection{main.cpp}
-\label{app:maincpp}
-\lstinputlisting{res/appendices/src/main.cpp}
-
-\end{appendices}
-
-\vfill
-\hrulefill
 
 \end{document}
