Integrate Chris' sections

--- a/report/report.bib
+++ b/report/report.bib
@@ -21,3 +21,26 @@
 	year={1985},
 	publisher={Elsevier}
 }
+@book{sonka1999image1,
+	title={Image Processing, Analysis, and Machine Vision},
+	author={Sonka, Milan and Hlavac, Vaclav and Boyle, Roger},
+	year={1999},
+	publisher={PWS Publishing},
+	chapter={11},
+	pages={559--576}
+}
+@book{sonka1999image2,
+	title={Image Processing, Analysis, and Machine Vision},
+	author={Sonka, Milan and Hlavac, Vaclav and Boyle, Roger},
+	year={1999},
+	publisher={PWS Publishing},
+	chapter={11.3},
+	pages={568}
+}
+@online{badea,
+	author = {Badea, C. and Pallikarakis, N.},
+	title = {Morphological Operations},
+	year = {n.d.},
+	url = {http://bme.med.upatras.gr/improc/Morphological%20operators.htm},
+	urldate = {2014-04-24}
+}
